--- a/css/style.css
+++ b/css/style.css
@@ -6,93 +6,205 @@
     margin: 0;
     padding: 0;
     font-family: 'Raleway', sans-serif;
+    list-style: none;
 }
+
 
 a {
     color: rgb(2, 27, 5);
+    padding: 20px;
     
 }
 
 h1{
-    font-size: 6vw;
+    font-size: 5vw;
     color: #e8f2eb;
+    padding: 10px 0 ;
 }
 
-.header{
+#header{
     width: 100vw;
-    height: 100px;
-    padding: 5px 10%;
-    background-color: rgb(222, 222, 222);
     position: fixed;
     display: flex;
-    justify-content:flex-end;
+    justify-content:space-between;
     align-items: center;
+    height: 100px;
+    padding: 5px 10%;
+    background-color: rgb(176, 195, 176);
+    z-index: 10;
 
 }
 
-.header .logo{
+.logo{
+    height: 80px;
     cursor: pointer;
-    margin-right: auto;
 }
 
-.header .nav_links{
-    list-style: none;
-
-}
-
-.header .nav_links li {
-    display: inline-block;
-    transition: .3s;
-    padding: 0px 20px;
-    border-radius: 50px;
-}
-
-.header .nav_links a{
-    font-size: 600;
-    color:rgb(3, 40, 25);
-    text-decoration: none;
-}
-
-.header .btn button{
-    margin-left: 20px;
-    font-weight: 600;
-    color: rgb(222, 222, 222);
-    padding: 9px 25px;
-    background-color: rgb(50, 102, 70);
-    border:none;
-    border-radius: 20px;
-    cursor: pointer;
-
-}
-
-.fondo_image{
-    max-width: 100%;
-    height: auto;
-}
-#cajita {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    background-color: #091c0f;
-    border-radius: 30px;
-}
-
-#cajita .item1 {
+.menu{
     display: flex;
-    padding: 20px;
-    border: 3px solid beige;
-    margin-bottom: 10px; /* Añadir margen inferior para separar del enlace */
+    justify-content: center;
+    align-items: center;
 }
 
-#cajita .item2 {
+.item{
+    margin:0 15px;
+    font-size: 18px;
+    font-weight: 600;
+    color:rgb(3, 23, 15);
+}
+
+#menu{
+    display: none;
+}
+
+.menu-icono{
+    height: 80px;
+}
+
+label{
+    cursor: pointer;
+    display: none;
+    padding: auto;
+}
+
+.btn{
+    padding: 10px 24px;
+    border-radius: 30px;
+    background-color: rgb(222, 222, 222);
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.btn:hover{
+    background-color: rgb(97, 117, 98);
+
+}
+
+
+
+.banner{
+    background-image: url("../imagenes/arvoles.jpg");
+    display: flex;
+    flex-wrap: wrap;
+    padding: 210px;
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-size:cover; 
+    justify-content: center;
+}
+
+#cajita{
+    display: grid;
+    grid-template-rows: 3fr 1fr;
+    grid: 1/3 ;
+    justify-content: center;
+    justify-items:center;
+    position: center;
+    text-align: center;
+    padding: 0 10px;
+}
+
+#cajita .item1{
+    display: flex;
+    background-color: #102c09;
+    opacity: 0.95;
+    padding: 50px;
+    border: 3px solid rgb(220, 245, 221);
+}
+
+
+#cajita .item2{
+    transition: .3s;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: rgb(241, 220, 195);
-    color: #316b42;
+    background-color: rgb(146, 165, 147);
+    color: #102c09;
     font-size: large;
     padding: 10px 30px;
     border-radius: 60px;
+}
+
+#cajita .item2:hover{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #102c09;
+    color: rgb(146, 165, 147);
+    font-size: large;
+    padding: 10px 30px;
+    border-radius: 60px;
+}
+
+
+
+#contenido{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+    justify-items:center;
+    align-items:center;
+    height: 90vh;
+    background-color: #102c09;
+    
+}
+
+.cajas_texto{
+    text-align: center;
+    margin-top: 50px;
+    margin-left: 50px;
+}
+
+.texto{
+    background-color: rgb(220, 245, 225);
+    border-radius: 30px;
+    padding: 50px;
+    color: #092c0e;
+    opacity: 0.8;
+    text-align: center;
+    transition: .3s;
+
+}
+
+.texto:hover{
+    background-color: rgb(155, 190, 166);
+    border-radius: 30px;
+    padding: 50px;
+    color: rgb(9, 44, 22);
+    opacity: 0.8;
+    text-align: center;
+}
+
+
+@media screen and (max-width:991px) {
+    .menu{
+        padding: 30px;
+        margin:0;
+    }
+
+    label{
+        display: initial;
+    }
+
+    .menu{
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        display: none;
+        background-color:rgb(176, 195, 176);
+    }
+
+    .item{
+        margin: 0 0 20px 0;
+        width: 100%;
+    }
+
+    .btn{
+        width: 100%;
+    }
+    
+    #menu:checked ~ .menu{
+        display: initial    ;
+    }
 }
