vulevo a modificar la bbdd y creo un check de sesion, el html para nyestro bosque y un error login

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ a {
     
 }
 
+
 h1{
     font-size: 5vw;
     color: #e8f2eb;
@@ -50,7 +51,8 @@ h1{
     margin:0 15px;
     font-size: 18px;
     font-weight: 600;
-    color:rgb(3, 23, 15);
+    color: rgb(2, 27, 5);
+
 }
 
 #menu{
@@ -80,7 +82,20 @@ label{
 
 }
 
+.bye{
+    padding: 10px 24px;
+    border-radius: 30px;
+    background-color: rgb(255, 255, 255);
+    font-weight: 600;
+    cursor: pointer;
+    text-align: center;
+    width: 200px;
+    margin: auto;
+}
 
+.bye:hover {
+    background-color: #8ab898;
+}
 
 .banner{
     background-image: url("../imagenes/arvoles.jpg");
@@ -173,6 +188,19 @@ label{
     color: rgb(9, 44, 22);
     opacity: 0.8;
     text-align: center;
+}
+
+h2{
+    padding: 10px 24px;
+    border-radius: 30px;
+    background-color: rgb(222, 222, 222);
+    font-weight: 600;
+    cursor: pointer;
+}
+
+h2:hover{
+    background-color: rgb(97, 117, 98);
+
 }
 
 
