--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 a {
     color: rgb(2, 27, 5);
     padding: 20px;
-    
+    text-decoration: none;
 }
 
 h1{
@@ -123,7 +123,7 @@ label{
     font-size: large;
     padding: 10px 30px;
     border-radius: 60px;
-    opacity: 0.8;
+    opacity: 0.87;
 }
 
 #cajita .item2:hover{
@@ -132,7 +132,7 @@ label{
     justify-content: center;
     /*background-color: #102c09;
     color: rgb(146, 165, 147);*/
-    opacity: 1;
+    opacity: 0.96;
     font-size: large;
     padding: 10px 30px;
     border-radius: 60px;
