--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,10 @@
 
 *{
     box-sizing: border-box;
+    max-width: 300vh;    /*Que no salga linea blanca en el lado derecho*/
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
     font-family: 'Raleway', sans-serif;
     list-style: none;
 }
@@ -118,12 +120,13 @@ label{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: rgb(146, 165, 147);
+    background-color: rgb(155, 175, 156);
     color: #102c09;
+    /*rgb(146, 165, 147)*/
     font-size: large;
     padding: 10px 30px;
     border-radius: 60px;
-    opacity: 0.87;
+    opacity: 0.8l;
 }
 
 #cajita .item2:hover{
