la imagen de inicio ahora ocupa todo el view inicial

--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,7 @@ label{
     background-repeat: no-repeat; 
     background-size:cover; 
     justify-content: center;
+    height: 100vh;
 }
 
 #cajita{
