errores ortograficos y modificaciones estilo

--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,18 @@ h1{
     font-size: 18px;
     font-weight: 600;
     color: rgb(2, 27, 5);
+}
 
+.menu.item a{
+    transition: 1.5s;
+}
+
+.menu .item a:hover {
+    color: #fff;
+}
+
+.item2:hover{
+    background-color:#3b6530;
 }
 
 #menu{
